# good-bad-state

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: build.yml
goog-bad-state/: Cargo.toml
migrations/: 20210414121534_init.sql
src/: main.js  main.rs  models.rs  requests.rs
src/front/: App.vue  router.js
src/front/components/: HelloWorld.vue
src/front/extensions/: fetch.js
src/front/views/: Home.vue
