[package]
name = "good-bad-state"
version = "0.1.0"
authors = ["Sartor <sartorua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.4.2", features = ["postgres", "runtime-async-std-native-tls", "decimal", "chrono"] }
async-std = { version = "1.6", features = [ "attributes" ] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.14"
env_logger = "0.8.3"
futures = "0.3.13"
rust_decimal = "1.10.3"
actix-web = "3"